--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/MainWindow.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/MainWindow.xaml
@@ -6,25 +6,13 @@
         xmlns:local="clr-namespace:vj4_zadatak1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="3*"/>
-        </Grid.ColumnDefinitions>
-        <DockPanel LastChildFill="False" Background="#FFC6EBE3" HorizontalAlignment="Left" Width="150">
-            <UIElement.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </UIElement.RenderTransform>
-            <Label Content="Label" Width="0"/>
-            <Label Content="Label" Width="0"/>
-            <Label x:Name="lblFeatures" Content="FEATURES" Width="0"/>
-        </DockPanel>
-        <Label Content="" HorizontalAlignment="Left" Margin="79,78,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-
-    </Grid>
+    <DockPanel LastChildFill="False">
+        <StackPanel Width="130" Background="#FFE3F2F4">
+            <Label x:Name="lblFeatures" Content="FEATURES" FontWeight="Bold" Background="#FF8BAEDA" HorizontalContentAlignment="Center" Height="35" VerticalContentAlignment="Center"/>
+            <Button x:Name="btnShowEmployees" Content="Show employees" Background="#00000000" FontWeight="Bold" BorderThickness="0,0,0,0" FontSize="11" Height="31" Click="btnShowEmployees_Click"/>
+            <Label Content="---------------------------" FontSize="11" Height="30"/>
+            <Button Content="Exit" Background="#FF8BAEDA" FontWeight="Bold" Height="28"/>
+        </StackPanel>
+        <ContentControl x:Name="contentPanel" Content="" Width="669"/>
+    </DockPanel>
 </Window>
