--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/MainWindow.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/MainWindow.xaml
@@ -11,7 +11,7 @@
             <Label x:Name="lblFeatures" Content="FEATURES" FontWeight="Bold" Background="#FF8BAEDA" HorizontalContentAlignment="Center" Height="35" VerticalContentAlignment="Center"/>
             <Button x:Name="btnShowEmployees" Content="Show employees" Background="#00000000" FontWeight="Bold" BorderThickness="0,0,0,0" FontSize="11" Height="31" Click="btnShowEmployees_Click"/>
             <Label Content="---------------------------" FontSize="11" Height="30"/>
-            <Button Content="Exit" Background="#FF8BAEDA" FontWeight="Bold" Height="28"/>
+            <Button Content="Exit" Background="#FF8BAEDA" FontWeight="Bold" Height="28" Click="Button_Click"/>
         </StackPanel>
         <ContentControl x:Name="contentPanel" Content="" Width="669"/>
     </DockPanel>
