Design xml for adding new employee to the database

--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
        
         <DockPanel Margin="0,0,1,0" Background="White">
-        <Label x:Name="txtEmployees" DockPanel.Dock="Top"  Background="#FFE3F2F4" HorizontalContentAlignment="Center" Content="Employees" VerticalAlignment="Top"/>
+        <Label x:Name="txtEmployees" DockPanel.Dock="Top"  Background="#FFE3F2F4" HorizontalContentAlignment="Center" Content="Employees" VerticalAlignment="Top" FontWeight="Bold"/>
         
         <StackPanel x:Name="stack" DockPanel.Dock="Bottom" HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,50,10">
             <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25" Margin="0,0,10,0"></Button>
