--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
@@ -11,7 +11,7 @@
         <Label x:Name="txtEmployees" DockPanel.Dock="Top"  Background="#FFE3F2F4" HorizontalContentAlignment="Center" Content="Employees" VerticalAlignment="Top" FontWeight="Bold"/>
         
         <StackPanel x:Name="stack" DockPanel.Dock="Bottom" HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,50,10">
-            <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25" Margin="0,0,10,0"></Button>
+            <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25" Margin="0,0,10,0" Click="btnAdd_Click_1"></Button>
             <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25"></Button>
         </StackPanel>
 
