--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/AddEmployee.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/AddEmployee.xaml
@@ -40,7 +40,7 @@
             <ComboBox x:Name ="txtReportsTo" Grid.Column="2" Grid.Row="5" Margin="5"/>
 
             <StackPanel Margin="5" Grid.Column="2" Grid.Row="6" Orientation="Horizontal">
-                <Button x:Name="btnAdd" Content="Add" Width="80" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,30,0"></Button>
+                <Button x:Name="btnAdd" Content="Add" Width="80" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,30,0" Click="btnAdd_Click"></Button>
                 <Button x:Name="btnCancel" Content="Cancel" Width="80" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnCancel_Click"></Button>
             </StackPanel>
         </Grid>
