--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/ShowEmployees.xaml
@@ -12,7 +12,7 @@
         
         <StackPanel x:Name="stack" DockPanel.Dock="Bottom" HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,50,10">
             <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25" Margin="0,0,10,0" Click="btnAdd_Click_1"></Button>
-            <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25"></Button>
+            <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="25" Click="btnDelete_Click_1"></Button>
         </StackPanel>
 
         <DataGrid
