--- a/4. vjezba/vj4_zadatak2/vj4_zadatak2/NewCustomer.xaml
+++ b/4. vjezba/vj4_zadatak2/vj4_zadatak2/NewCustomer.xaml
@@ -33,16 +33,16 @@
             <Label Content="City:" Grid.Column="1" Grid.Row="4" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></Label>
             <Label Content="Country:" Grid.Column="1" Grid.Row="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></Label>
 
-            <TextBox x:Name="txtID"  Grid.Column="2" Grid.Row="1"></TextBox>
-            <TextBox x:Name="txtCompany" Grid.Column="2" Grid.Row="2"></TextBox>
+            <TextBox x:Name="txtID" Margin="5" Grid.Column="2" Grid.Row="1"></TextBox>
+            <TextBox x:Name="txtCompany" Margin="5" Grid.Column="2" Grid.Row="2"></TextBox>
 
-            <ComboBox x:Name="txtCity" Margin="5" Grid.Column="2" Grid.Row="4" ></ComboBox>
-            <ComboBox x:Name="txtCountry" Margin="5" Grid.Column="2" Grid.Row="5" ></ComboBox>
+            <ComboBox x:Name="cmbCity" Margin="5" Grid.Column="2" Grid.Row="4" ></ComboBox>
+            <ComboBox x:Name="cmbCountry" Margin="5" Grid.Column="2" Grid.Row="5" ></ComboBox>
 
 
             <StackPanel Margin="5" HorizontalAlignment="Center" Grid.Column="2" Grid.Row="6" Orientation="Horizontal">
-                <Button x:Name="btnSave" Width="100" Content="Save" Margin="0,0,20,0" Background="#FFC7FFB9"></Button>
-                <Button x:Name="btnCancel" Width="100" Content="Cancel" Background="#FFC7FFB9"></Button>
+                <Button x:Name="btnSave" Width="100" Content="Save" Margin="0,0,20,0" Background="#FFC7FFB9" Click="btnSave_Click"></Button>
+                <Button x:Name="btnCancel" Width="100" Content="Cancel" Background="#FFC7FFB9" Click="btnCancel_Click"></Button>
             </StackPanel>
         </Grid>
     </DockPanel>
