--- a/4. vjezba/vj4_zadatak4/vj4_zadatak4/MainWindow.xaml
+++ b/4. vjezba/vj4_zadatak4/vj4_zadatak4/MainWindow.xaml
@@ -11,7 +11,7 @@
             <Label FontWeight="Bold" Content="FEATURES: " Width="200" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Label>
             <Button x:Name="BtnShowCustomers" Content="Show customers" BorderThickness="0" Width="200" Background="Transparent" FontWeight="Bold"></Button>
             <Button x:Name="BtnNewCustomer" Content="New customer..." BorderThickness="0" Width="200" Background="Transparent" FontWeight="Bold"></Button>
-            <Button x:Name="BtnExit" Content="Exit" BorderThickness="0" Width="200" Background="Transparent" FontWeight="Bold"></Button>
+            <Button x:Name="BtnExit" Content="Exit" BorderThickness="0" Width="200" Background="Transparent" FontWeight="Bold" Click="BtnExit_Click"></Button>
         </StackPanel>
     </DockPanel>
 </Window>
