--- a/4. vjezba/vj4_zadatak4/vj4_zadatak4/NewCustomer.xaml
+++ b/4. vjezba/vj4_zadatak4/vj4_zadatak4/NewCustomer.xaml
@@ -36,7 +36,7 @@
             <ComboBox x:Name="CmbCountry" Grid.Column="1" Grid.Row="4" Margin="15"></ComboBox>
 
             <StackPanel Orientation="Horizontal"  Grid.Column="1" Grid.Row="5" Margin="10" HorizontalAlignment="Center">
-                <Button x:Name="BtnSave" Content="Save" Width="100" Background="#FFF4C388" Margin="0,0,20,0"></Button>
+                <Button x:Name="BtnSave" Content="Save" Width="100" Background="#FFF4C388" Margin="0,0,20,0" Click="BtnSave_Click"></Button>
                 <Button x:Name="BtnCancel" Content="Cancel" Width="100" Background="#FFF4C388" Click="BtnCancel_Click"></Button>
 
             </StackPanel>
