--- a/4. vjezba/vj4_zadatak6/vj4_zadatak6/MainWindow.xaml
+++ b/4. vjezba/vj4_zadatak6/vj4_zadatak6/MainWindow.xaml
@@ -6,7 +6,12 @@
         xmlns:local="clr-namespace:vj4_zadatak6"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <DockPanel LastChildFill="True">
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Height="50" Background="#FFFBB1B1" VerticalAlignment="Top">
+            <Label Content="FEATURES" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="200"></Label>
+            <Button x:Name="BtnShowProducts" Content="Show products" Background="Transparent" Width="200" FontWeight="Bold" BorderThickness="0"></Button>
+            <Button x:Name="BtnNewProduct" Content="New product..." Background="Transparent" Width="200" FontWeight="Bold" BorderThickness="0" ></Button>
+            <Button x:Name="BtnExit" Content="Exit" Background="Transparent" Width="200" FontWeight="Bold" BorderThickness="0" Click="BtnExit_Click"></Button>
+        </StackPanel>
+    </DockPanel>
 </Window>
