--- a/4. vjezba/vj4_zadatak6/vj4_zadatak6/ShowProducts.xaml
+++ b/4. vjezba/vj4_zadatak6/vj4_zadatak6/ShowProducts.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel Background="White" LastChildFill="True">
-        <Button x:Name="BtnDelete" Content="Delete" DockPanel.Dock="Bottom" FontWeight="Bold" Background="#FFFBB1B1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,50,30" Width="150"></Button>
+        <Button x:Name="BtnDelete" Content="Delete" DockPanel.Dock="Bottom" FontWeight="Bold" Background="#FFFBB1B1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,50,30" Width="150" Click="BtnDelete_Click"></Button>
         <DataGrid x:Name="DgvProducts" Margin="50,20,50,10"></DataGrid>
     </DockPanel>
 </UserControl>
